--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
+/src/main/resources/application-neon-local.yml
+/src/main/resources/application-postgres-local.yml
