--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,6 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_PROFILES_ACTIVE: h2
+      SPRING_PROFILES_ACTIVE: neon
+
+      SPRING_DATASOURCE_PASSWORD: ${FRIDGE_NEON_DB_PASSWORD}
