add keycloak profile - temp

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -74,3 +74,15 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+
+---
+spring:
+  config:
+    activate:
+      on-profile: keycloak
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/fridge-realm
